# production-webhook-system

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LOCAL_SETUP.md  Makefile  README.md  RESTATE_REGISTRATION.md  SEQUIN_SETUP.md  SVIX_SETUP.md  TESTING.md  THREE_SERVICES_EXPLAINED.md  docker-compose.yml
infrastructure/postgres/: init.sql
infrastructure/restate/: restate.toml
infrastructure/sequin/: config.yaml  setup.sh
load-testing/: compare-architectures.sh
load-testing/k6/: channel-overflow.js  crash-new-architecture.js  crash-old-architecture.js  crash-test.js  merchant-failures.js  merchant-slow.js  test-new.js  test-old.js
load-testing/k6/lib/: common.js
load-testing/scripts/: chaos-new.sh  chaos-old.sh  kill-service.sh
scripts/: register-restate-handler.sh  run-tests.sh
services/merchant-simulator/: Cargo.toml  Dockerfile
services/merchant-simulator/src/: main.rs
services/new-architecture/api-service/: Cargo.toml  Dockerfile
services/new-architecture/api-service/src/: main.rs
services/new-architecture/data-service/: Cargo.toml  Dockerfile
services/new-architecture/data-service/src/: main.rs
services/new-architecture/svix-caller/: Cargo.toml  Dockerfile
services/new-architecture/svix-caller/src/: main.rs
services/new-architecture/webhook-consumer/: Cargo.toml  Dockerfile
services/new-architecture/webhook-consumer/src/: main.rs
services/old-architecture/: Cargo.toml  Dockerfile
services/old-architecture/src/: main.rs
tests/: baseline-test.sh  crash-test.sh
tests/lib/: helpers.sh
