[package]
name = "svix-caller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
restate-sdk = { version = "0.7", features = ["schemars"] }
schemars = { version = "1.0.0-alpha.17", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
svix = "1.17"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Pin time to version that doesn't require edition2024
time = "=0.3.36"
